# can-i-finetune-this

./: CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/calibration/: local_4080.json
benchmarks/results/: Qwen__Qwen2.5-0.5B-Instruct_lora_s1024_b1_r16_steps3.json  Qwen__Qwen2.5-0.5B-Instruct_qlora_s1024_b1_r16_steps3.json  Qwen__Qwen2.5-0.5B-Instruct_qlora_s2048_b1_r16_steps3.json  Qwen__Qwen2.5-1.5B-Instruct_qlora_s1024_b1_r16_steps3.json  Qwen__Qwen2.5-1.5B-Instruct_qlora_s1024_b1_r16_steps3_nockpt.json  Qwen__Qwen2.5-1.5B-Instruct_qlora_s1024_b2_r16_steps2.json  Qwen__Qwen2.5-1.5B-Instruct_qlora_s2048_b1_r16_steps3.json  Qwen__Qwen2.5-1.5B-Instruct_qlora_s4096_b1_r16_steps2.json  Qwen__Qwen2.5-1.5B-Instruct_qlora_s512_b1_r16_steps3.json  Qwen__Qwen2.5-3B-Instruct_qlora_s1024_b1_r16_steps2.json  Qwen__Qwen2.5-7B-Instruct_qlora_s1024_b1_r16_steps2.json  _compare.md  _report.html  _report.md  sshleifer__tiny-gpt2_lora_s128_b1_r8_steps3.json
docs/: architecture.html  design.md  index.md  ip_safety.md  memory_model.md  rtx4080_baselines.md  troubleshooting.md
examples/: README.md
examples/qwen_1_5b_qlora_4080/: README.md  config.yaml  dataset_format.md  eval_smoke.py  expected_vram.md  requirements.txt  run.sh  train.py  troubleshooting.md
examples/tiny_gpt2_lora_smoke/: README.md  config.yaml  dataset_format.md  eval_smoke.py  expected_vram.md  requirements.txt  train.py  troubleshooting.md
scripts/: refresh_estimates.py  run_4080_baselines.sh
src/canifinetune/: __init__.py  cli.py  doctor.py
src/canifinetune/bench/: __init__.py  memory_trace.py  oom.py  runner.py  synthetic_data.py
src/canifinetune/estimator/: __init__.py  calibration.py  formulas.py  memory.py  model_metadata.py  recommender.py
src/canifinetune/recipes/: __init__.py  generator.py
src/canifinetune/recipes/templates/: README.md.j2  config.yaml.j2  dataset_format.md.j2  eval_smoke.py.j2  expected_vram.md.j2  requirements.txt.j2  sample_dataset.jsonl.j2  train.py.j2  troubleshooting.md.j2
src/canifinetune/reports/: __init__.py  html.py  markdown.py
src/canifinetune/utils/: __init__.py  gpu.py  hf.py  logging.py  subprocess.py  units.py
tests/: conftest.py  test_bench.py  test_calibration.py  test_cli.py  test_estimator.py  test_estimator_accuracy.py  test_model_metadata.py  test_recipe_generator.py  test_recommender.py  test_report.py  test_system_utils.py
